tests/run/error_extern_mut_param.out
tests/run/error_extern_mut_param.em:6:5: error: an extern parameter must be plain, 'mut' on a buffer ([T]) the C function writes, or 'move' on a Ptr handle it takes ownership of
